# scp-analyzer

./: .gitignore  CHANGELOG.md  Makefile  NOTICE  README.md  pyproject.toml
scp_analyzer/: DiscoverSCPs.ipynb  discover_scps.py
src/scp_analyzer/: __init__.py  discover_scps.py
