[tool.poetry]
name = "scp-analyzer"
version = "0.4.1"
description = "Discover and present SCPs applicable to each account in an AWS Organization"
classifiers = ["Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT No Attribution License (MIT-0)", "Operating System :: OS Independent", "Natural Language :: English"]
authors = ["Pedro Galvao <pgalvao@amazon.co.uk>"]
license = "MIT-0"
homepage = "https://github.com/aws-samples/scp-analyzer"
repository = "https://github.com/aws-samples/scp-analyzer"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
boto3 = "^1.17.73"

[tool.poetry.group.dev.dependencies]
pip-audit = "^2.6.1"
pip-licenses = "^4.3.3"
black = "^22.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scp-analyzer = "scp_analyzer:discover_scps.main"
scp-analyser = "scp_analyzer:discover_scps.main"
