[tool.poetry]
name = "scp-analyzer"
version = "0.7.0"
description = "Discover and present SCPs applicable to each account in an AWS Organization"
classifiers = ["Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT No Attribution License (MIT-0)", "Operating System :: OS Independent", "Natural Language :: English"]
authors = ["Pedro Galvao <pgalvao@amazon.co.uk>"]
license = "MIT-0"
homepage = "https://github.com/aws-samples/scp-analyzer"
repository = "https://github.com/aws-samples/scp-analyzer"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
boto3 = "^1.35.63"
typer = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pip-audit = "^2.7.3"
pip-licenses = "^5.0.0"
black = "^24.10.0"
bandit = "^1.7.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scp-analyzer = "scp_analyzer:discover_scps.app"
scp-analyser = "scp_analyzer:discover_scps.app"
