[project]
name = "scp-analyzer"
version = "0.8.0"
description = "Discover and present SCPs applicable to each account in an AWS Organization"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT No Attribution License (MIT-0)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
readme = "README.md"
license = "MIT-0"
authors = [{ name = "Pedro Galvao", email = "pgalvao@amazon.co.uk" }]
requires-python = ">=3.9"
dependencies = ["boto3>=1.39.3", "pandas>=2.3.1", "typer>=0.16.0"]

[project.scripts]
scp-analyzer = "scp_analyzer:discover_scps.app"
scp-analyser = "scp_analyzer:discover_scps.app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pip-audit>=2.9.0", "pip-licenses>=5.0.0", "ruff>=0.12.2"]


[project.urls]
homepage = "https://github.com/aws-samples/scp-analyzer"
repository = "https://github.com/aws-samples/scp-analyzer"
